styles/style.css
body {
    background-color: #161A30;
    color: #F0ECE5;
    font-family: 'Cormorant Garamond', serif;
}

#italic {
    font-style: italic;
}

header {
    margin: 0;
    width: 100%;
}

h1 {
    text-align: center;
    background-color: #31304d7d;
    font-size: 6.5vw;
    padding: 2% 0 2% 0;
}

h2 {
    font-size: 4vw;
}

p {
    font-size: 2.5vw;
    padding: 0.5%;
}

a {
    text-decoration: none;
    color: #B6BBC4
}

.homePageArticle {
    text-align: center;
    background-color: #31304d7d;
}

ul {
    list-style: none;
    font-size: 2vw;
    display: inline-flex;
    justify-content: space-evenly;
    width: 100%;
    height: 100%;
    padding: 0;
}

li {
    text-align: center;
    width: 8%;
    font-weight: 400;
    padding: 0.5em;
    border-radius: 1em;
    border: solid #161A30 0.1em;
    background-color: #b6bbc47e
}

nav {
    width: 100%;
    border-radius: 2em;
    border: solid #31304D 0.25em;
    border-radius: 2em;
    background-color: #31304D;
    box-sizing: border-box;
}

.category {
    margin-top: 2em;
    margin-bottom: 2em;
    text-align: center;
}

section {
    width: 100%;
    background-color: #31304D;
    border-radius: 2em;
}

.images {
    padding-top: 2%;
    padding-bottom: 2%;
    width: 95%;
    margin: 0 auto;
}

section .Res1152x896 img {
    height: auto;
    width: 100%;
}

section .Res1152x896 {
    width: 100%;
    display: inline-grid;
    grid-template-columns: auto auto auto auto;
    gap: 2em;
}

.Res704x1408 img {
    height: auto;
    width: 100%;
}

.Res704x1408 {
    padding-top: 2em;
    width: 100%;
    display: inline-grid;
    grid-template-columns: auto auto auto auto auto;
    gap: 2em;
}

img {
    border-radius: 1em;
}

.Res2048x1536 {
    width: 100%;
    padding-top: 2em;
    display: inline-grid;
    grid-template-columns: auto auto auto auto;
    gap: 2em;
}

.Res2048x1536 img {
    height: auto;
    width: 100%;
}

footer {
    display: flex;
    width: 100%;
    height: auto;
    background-color: #b6bbc444;
    margin-top: 6em;
    padding-top: .5%;
    padding-bottom: .5%;
    justify-content: flex-end;
}

footer span {
    padding-left: .5%;
    padding-right: .5%;
    font-size: 1vw;
}

footer img {
    border-radius: 0.5em;
    width: 2.5vw;
    height: 100%;
}

.footerFirstSpan {
    flex: 1;
}

.meImg {
    width: 20%;
    height: auto;
    border-radius: 40%;
    float: right;
    margin-right: 2%;
    margin-top: 5%;
}

